# python-harness-engineering

./: .gitignore  README.md  SKILL.md  reference-architecture.md
scripts/: arch_lint.py  harness_audit.py  harness_init.py  stability_gate.py
templates/: AGENTS.md  RULES.md  conftest_evals.py  conftest_integration.py  conftest_root.py  conftest_unit.py  pyproject.toml
